Remove hardcoded Java option
The template `default_tomcat6.erb` enforced the use of CMS garbage
collection on all distros that set JAVA_OPTS in /etc/default/tomcat#.
This eliminates the ability to use alternative garbage collectors like
Parallel or G1.

* Remove concatenation of -XX:+UseConcMarkSweepGC from template
* Cleanup commented out lines
* Add -XX:+UseConcMarkSweepGC to default attribute
* Update README
* Rename template to reflect it affecting all versions of Tomcat